# YS

./: .env.example  pyproject.toml
sales_cli/: cli.py  config.py  kraken_client.py  legion_client.py  slack_bot.py
sales_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
