[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sales-cli"
version = "0.1.0"
description = "CLI for Kraken and Legion sales operations"
authors = [{ name = "Auto" }]
requires-python = ">=3.9"
dependencies = [
  "click>=8.1.7",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.2",
  "pydantic>=2.9.2",
  "krakenex>=2.1.0"
]

[project.scripts]
sales = "sales_cli.cli:main"

[tool.setuptools.packages.find]
include = ["sales_cli*"]
